# lommedalen-nordlys-bluesky

./: .env.example  .gitignore  README.md  config.example.json  config.json  dummy.md  package-lock.json  pyproject.toml  requirements.txt  sun_schedule.json  sun_schedule_nordkapp.json  valid_webcam_ids.txt  webcam_locations.example.json  webcam_locations.json  webcam_nordkapp.json
.github/workflows/: post.yml  run-tests.yml  update-dummy-md.yml  update-sun-schedule.yml
kp_data/2025/11/: 2025_11.jsonl
kp_data_nordkapp/2025/11/: 2025_11.jsonl
src/: check_darkness.py  check_darkness.sh  check_darkness_nordkapp.sh  check_kp.sh  check_kp_area.sh  check_kp_multi.sh  check_kp_multi_nordkapp.sh  main.py  main.ts  nordkapp_test.py
tests/: test_color_heuristic.py  test_darkness_gate.py  test_image_ai.py  test_kp_fetch.py  test_post_text.py
