[tool.poetry]
name = "lommedalen-nordlys-bluesky"
version = "1.0.0"
description = "A Bluesky bot that monitors Lommedalen area webcams for aurora borealis (northern lights)."
authors = ["Turbolego <turbolego@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["bsky", "bluesky", "atproto", "bot", "python", "aurora", "northern-lights", "lommedalen"]

[tool.poetry.dependencies]
python = ">=3.11"
requests = "*"
python-dotenv = "*"
atproto = "*"
Pillow = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
